--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --open --mode development"
   },
   "repository": {
     "type": "git",
@@ -18,12 +19,20 @@
     "url": "https://github.com/SelaDanti/kwame/issues"
   },
   "homepage": "https://github.com/SelaDanti/kwame#readme",
-  "devDependencies": {
+  "dependencies": {
     "@babel/core": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "webpack": "^4.40.2",
+    "webpack-dev-server": "^3.8.1"
+  },
+  "devDependencies": {
     "webpack-cli": "^3.3.9"
   }
 }
